--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -73,16 +73,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+   - family: Poppins
+     fonts:
+       - asset: assets/fonts/Poppins-Medium.ttf
+       - asset: assets/fonts/Poppins-Regular.ttf
+       - asset: assets/fonts/Poppins-SemiBold.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+   - family: Amellinda
+     fonts:
+       - asset: assets/fonts/Amellinda-Weddings.otf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
