Added Dropdown menu

--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
    - assets/images/adopt.png
    - assets/images/donate.png
    - assets/images/igarchu_logo.png
+   - assets/images/register.png
   #  - images/a_dot_ham.jpeg
 
 
