--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.0.2
+  cloud_firestore: ^3.4.4
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
