--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
   provider: ^6.0.3
+  file_picker: ^5.0.1
+  firebase_storage: ^10.3.5
 
 dev_dependencies:
   flutter_test:
