--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
   provider: ^6.0.3
+  equatable: ^2.0.3
+  image_picker: ^0.8.5+3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
