Added Pet Card UI

--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.3
   image_picker: ^0.8.5+3
   get: ^4.6.5
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
