--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   image_picker: ^0.8.5+3
   get: ^4.6.5
   expandable: ^5.0.1
+  firebase_storage: ^10.3.5
+  file_picker: ^4.1.3
+  open_file: ^3.2.1
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
