--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^4.1.3
   open_file: ^3.2.1
   path_provider: ^2.0.5
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
