--- a/igarchu_capstone/pubspec.yaml
+++ b/igarchu_capstone/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.0.2
   cloud_firestore: ^3.4.4
+  firebase_storage: ^10.0.3
   firebase_core: ^1.20.1
   firebase_auth: ^3.6.3
   provider: ^6.0.3
